// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm LoginForm with rememberMeLabel 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-9"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-10"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-password-id"
            name="pf-login-password-id"
            required=""
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-4"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="pf-login-remember-me-id"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="pf-login-remember-me-id"
          >
            Remember me
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-5"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LoginForm LoginForm with show password 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-11"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-input-group"
        >
          <div
            class="pf-v6-c-input-group__item pf-m-fill"
          >
            <span
              class="pf-v6-c-form-control"
            >
              <input
                aria-invalid="false"
                data-ouia-component-id="OUIA-Generated-TextInputBase-12"
                data-ouia-component-type="PF6/TextInput"
                data-ouia-safe="true"
                id="pf-login-password-id"
                name="pf-login-password-id"
                required=""
                type="password"
                value=""
              />
            </span>
          </div>
          <div
            class="pf-v6-c-input-group__item"
          >
            <button
              aria-label="Show password"
              class="pf-v6-c-button pf-m-control"
              data-ouia-component-id="OUIA-Generated-Button-control-1"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-unified"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="M16 10c-3.309 0-6 2.691-6 6s2.691 6 6 6 6-2.691 6-6-2.691-6-6-6Zm0 10c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4Zm14.79-4.665C30.009 13.776 25.625 6 16 6S1.991 13.776 1.209 15.336a1.472 1.472 0 0 0 0 1.328c.781 1.559 5.165 9.335 14.79 9.335s14.009-7.776 14.791-9.336a1.474 1.474 0 0 0 0-1.329ZM16 24c-8.049 0-11.937-6.222-12.882-8C4.064 14.222 7.951 8 16 8s11.938 6.224 12.882 8c-.946 1.778-4.833 8-12.882 8Z"
                    />
                  </svg>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-6"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LoginForm should render Login form 1`] = `
<DocumentFragment>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-username-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Username
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-username-id"
            name="pf-login-username-id"
            required=""
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="pf-login-password-id"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Password
          </span>
          <span
            aria-hidden="true"
            class="pf-v6-c-form__label-required"
          >
             *
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            id="pf-login-password-id"
            name="pf-login-password-id"
            required=""
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group pf-m-action"
    >
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-form__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary pf-m-block"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="submit"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Log In
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
